--- a/emotiondiary/src/App.css
+++ b/emotiondiary/src/App.css
@@ -77,7 +77,7 @@ header {
   border-bottom: 1px solid #e2e2e2;
 }
 
-header > div {
+header>div {
   display: flex;
 }
 
@@ -159,15 +159,19 @@ header button {
 .DiaryItem .emotion_img_wrapper_1 {
   background-color: #64c964;
 }
+
 .DiaryItem .emotion_img_wrapper_2 {
   background-color: #9dd772;
 }
+
 .DiaryItem .emotion_img_wrapper_3 {
   background-color: #fdce17;
 }
+
 .DiaryItem .emotion_img_wrapper_4 {
   background-color: #fd8446;
 }
+
 .DiaryItem .emotion_img_wrapper_5 {
   background-color: #fd565f;
 }
@@ -198,8 +202,7 @@ header button {
 
 /* DiaryEditor */
 
-.DiaryEditor {
-}
+.DiaryEditor {}
 
 .DiaryEditor section {
   margin-bottom: 40px;
@@ -290,14 +293,17 @@ header button {
   background-color: #9dd772;
   color: white;
 }
+
 .EmotionItem_on_3 {
   background-color: #fdce17;
   color: white;
 }
+
 .EmotionItem_on_4 {
   background-color: #fd8446;
   color: white;
 }
+
 .EmotionItem_on_5 {
   background-color: #fd565f;
   color: white;
@@ -305,8 +311,7 @@ header button {
 
 /* Diary */
 
-.DiaryPage {
-}
+.DiaryPage {}
 
 .DiaryPage section {
   width: 100%;
@@ -337,15 +342,19 @@ header button {
 .DiaryPage .diary_img_wrapper_1 {
   background-color: #64c964;
 }
+
 .DiaryPage .diary_img_wrapper_2 {
   background-color: #9dd772;
 }
+
 .DiaryPage .diary_img_wrapper_3 {
   background-color: #fdce17;
 }
+
 .DiaryPage .diary_img_wrapper_4 {
   background-color: #fd8446;
 }
+
 .DiaryPage .diary_img_wrapper_5 {
   background-color: #fd565f;
 }
